# nexura-yangisi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  nginx.conf
BACKEND/: .env.example  backend.err  config.json.example  pyproject.toml  requirements.txt  start.bat  stop.bat
BACKEND/docs/: ACTIONABLE_ROADMAP_A_B.txt  BUGS_FIXED_REPORT.txt  DEEP_ANALYSIS_A_B_CATEGORIES.txt  DETAILED_CHANGELOG.txt  FINAL_SUMMARY_A_B_ANALYSIS.txt  INDEX_A_B_DOCUMENTS.txt  NEXURA_ANALYSIS.md  NEXURA_DOCS.md  NEXURA_SENIOR_AUDIT.md  NEXURA_SENIOR_AUDIT_2.md  QUICK_REFERENCE_A_B.txt  README_BUGFIXES.txt  SUMMARY_AND_CLEANUP.txt  analysis_problems_and_solutions.txt  bugs.md
BACKEND/nexura/: __init__.py  __main__.py  ai_engine.py  cli.py  config.py  cve_lookup.py  github_client.py  history_db.py  n8n_client.py  ollama_client.py  runner.py  tool_selector.py  verification.py
BACKEND/nexura/models/: __init__.py  schemas.py  services.py
BACKEND/nexura/parsers/: __init__.py  amass.py  gobuster.py  network.py  nikto.py  nmap.py  nuclei.py  sqlmap.py  whatweb.py
BACKEND/nexura/prompts/: system.txt
BACKEND/nexura/report/: __init__.py  generator.py
BACKEND/nexura/scanners/: __init__.py  network.py
BACKEND/nexura/web/: __init__.py  app.py
BACKEND/scripts/: download_model.py  setup_docker.sh  setup_linux.sh  start_production.sh  test_imports.py
BACKEND/tests/: __init__.py  test_api.py  test_core.py  test_cve_lookup.py  test_history_db.py  test_integration.py  test_parsers.py  test_scanners.py  test_schemas.py
FRONTEND/: index.html  (+3 more)
(+28 files in other folders)
